<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Loginregister</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="hint_password">Password</string>
    <string name="profile_hint_firstname">First name</string>
    <string name="profile_hint_lastname">Last name</string>
    <string name="profile_hint_dob">D.O.B</string>
    <string name="profile_hint_save">Save</string>
    <string name="profile_hint_mandatory">All the details are mandatory to include.Please provide all details to process forward</string>
    <string name="profile_hint_eaddress">email</string>
    <string name="menu_create_network">Create Network</string>
    <string name="network_title">Enter Title</string>
    <string name="network_create_genre"> Enter genre</string>
    <string name="network_create_desc"> Enter Description</string>


    <string name="menu_log_out">Log out</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_explore">Explore</string>
    <string name="title_Mynetwork">My Network</string>
    <string name="title_feed">Feed</string>
    <string name="title_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore_more">More</string>
    <string name="no_image">no image</string>
    <string name="sample_text">SAMPLE TEXT</string>
    <string name="fal">descriptions</string>
    <string name="time">time</string>
</resources>
