<android.support.v7.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="5dp"
    app:cardUseCompatPadding="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="0dp"
        android:background="?android:selectableItemBackground">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
            android:id="@+id/explore_card_image"
            android:layout_width="100dp"
            android:layout_height="130dp"

            android:layout_gravity="center_horizontal"
            android:scaleType="fitXY"
            android:contentDescription="@string/no_image"
            />

        <TextView
            android:id="@+id/explore_card_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/sample_text"
            android:textSize="16sp"
            android:textColor="@color/input_login"
            android:textStyle="bold"
            android:layout_toEndOf="@id/explore_card_image"
            />
        <TextView
            android:id="@+id/explore_card_desc"
            android:layout_width="match_parent"
            android:layout_height="97dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:layout_marginStart="5dp"
            android:layout_gravity="center"
            android:padding="2dp"
            android:text="@string/fal"
            android:textSize="16sp"
            android:textColor="@color/bottom_navigation"
            android:textStyle="bold"
            android:layout_toEndOf="@+id/explore_card_image"
            android:layout_below="@+id/explore_card_title"
            />

            <TextView
                android:id="@+id/explore_card_created"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/time"
                android:textColor="@color/input_login_hint"
                android:layout_below="@id/explore_card_image"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>